openpgp: Implement GCM mode.
  - The Galois/Counter mode for block ciphers is a FIPS-approved AEAD
    mode.  It will be added to the upcoming OpenPGP standard so that
    we have a FIPS-compliant subset of OpenPGP.

  - Currently, this is only implemented by the Nettle, OpenSSL, and
    Botan backend.  There is a RustCrypto implementation, but it needs
    cipher ^0.4.

--- a/openpgp/NEWS
+++ b/openpgp/NEWS
@@ -3,6 +3,9 @@
 #+TITLE: sequoia-openpgp NEWS – history of user-visible changes
 #+STARTUP: content hidestars
 
+* Changes in XXX
+** New functionality
+   - types::AEADAlgorithm::GCM
 * Changes in 1.15.0
 ** New functionality
    - StandardPolicy::accept_hash_property
